# LineWhiz

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  ai-workflow-playbook.md  docker-compose.yml  linewhiz-spec.md  pyproject.toml  server.py  smithery.yaml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: API-SPEC.md  CLAUDE.md  DATABASE-SCHEMA.sql  DEPLOYMENT-GUIDE.md  PRD.md  TEST-PLAN.md  ai-workflow-playbook.md  architecture.md  linewhiz-spec.md  market-analysis.md
src/: __init__.py  config.py  server.py
src/auth/: api_keys.py  gate.py  tiers.py
src/db/: __init__.py  database.py
src/linewhiz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  usage.py  user.py
src/services/: __init__.py  flex_builder.py  line_api.py
src/tools/: __init__.py  account.py  automation.py  insights.py  messaging.py  reporting.py  richmenu.py
tests/: __init__.py  conftest.py  test_account.py  test_auth.py  test_database.py  test_insights.py  test_line_api.py  test_messaging.py  test_richmenu.py  test_server.py
