[project]
name = "linewhiz"
version = "0.1.0"
description = "Premium MCP server for AI-powered LINE Official Account management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "line", "chatbot", "ai", "automation", "line-official-account"]
authors = [
    { name = "Kinzen", email = "kinzen.dev@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "line-bot-sdk>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "sse-starlette>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Kinzen-dev/LineWhiz"
Repository = "https://github.com/Kinzen-dev/LineWhiz"
Issues = "https://github.com/Kinzen-dev/LineWhiz/issues"

[project.scripts]
linewhiz = "src.server:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "PLW"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
